// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Invite renders correctly with no recipients 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderBottomColor": 0,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "left": 0,
          "marginBottom": 0,
          "marginLeft": 16,
          "opacity": 1,
          "padding": 0,
          "position": "absolute",
        }
      }
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      >
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="9.75"
          y2="9.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="15.75"
          y2="15.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="21.75"
          y2="21.75"
        />
      </svg>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#EDEEEF",
        "borderBottomWidth": 1,
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#EDEEEF",
            "borderRadius": 18,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "height": 36,
            "paddingRight": 8,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "marginLeft": 17,
            "marginRight": 13,
          }
        }
      >
        <svg
          fill="none"
          height={15}
          style={Object {}}
          viewBox="0 0 14 15"
          width={14}
        >
          <path
            clipRule="evenodd"
            d="M2.162 5.946a3.784 3.784 0 107.568 0 3.784 3.784 0 00-7.568 0zM0 5.946a5.946 5.946 0 008.929 5.145l3.225 3.226a1.081 1.081 0 001.53-1.53l-3.11-3.108A5.946 5.946 0 100 5.946z"
            fill="#B4B9BD"
            fillRule="evenodd"
            style={Object {}}
          />
        </svg>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="global:search"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "#2E3338",
                "flex": 1,
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingHorizontal": 0,
                "paddingVertical": 12,
              },
              undefined,
              Object {
                "paddingVertical": 6,
              },
            ]
          }
          testID="SearchInput"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
    testID="RecipientPicker"
  >
    <RCTScrollView
      ListEmptyComponent={
        <View
          style={
            Object {
              "justifyContent": "center",
              "paddingHorizontal": 24,
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "paddingVertical": 24,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                  "textAlign": "center",
                }
              }
            >
              noContacts
            </Text>
          </View>
        </View>
      }
      ListHeaderComponent={[Function]}
      contentContainerStyle={null}
      data={Array []}
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={30}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="always"
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
        />
        <View
          onLayout={[Function]}
          style={
            Object {
              "justifyContent": "center",
              "paddingHorizontal": 24,
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "paddingVertical": 24,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                  "textAlign": "center",
                }
              }
            >
              noContacts
            </Text>
          </View>
        </View>
      </View>
    </RCTScrollView>
    <View
      collapsable={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
          },
          Object {
            "height": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;

exports[`Invite renders correctly with recipients 1`] = `
<View
  style={
    Object {
      "flex": 1,
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "backgroundColor": "transparent",
        "borderBottomColor": 0,
        "borderBottomWidth": 1,
        "flexDirection": "row",
        "height": 56,
        "justifyContent": "center",
      }
    }
  >
    <View
      accessible={true}
      focusable={false}
      hitSlop={
        Object {
          "bottom": 10,
          "left": 10,
          "right": 10,
          "top": 10,
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      style={
        Object {
          "left": 0,
          "marginBottom": 0,
          "marginLeft": 16,
          "opacity": 1,
          "padding": 0,
          "position": "absolute",
        }
      }
    >
      <svg
        fill="none"
        height="32"
        viewBox="0 0 32 32"
        width="32"
      >
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="9.75"
          y2="9.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="15.75"
          y2="15.75"
        />
        <line
          stroke="#2E3338"
          strokeLinecap="round"
          strokeWidth="2.5"
          x1="7.25"
          x2="24.75"
          y1="21.75"
          y2="21.75"
        />
      </svg>
    </View>
  </View>
  <View
    style={
      Object {
        "borderBottomColor": "#EDEEEF",
        "borderBottomWidth": 1,
        "paddingBottom": 5,
      }
    }
  >
    <View
      style={
        Array [
          Object {
            "alignItems": "center",
            "borderColor": "#EDEEEF",
            "borderRadius": 18,
            "borderWidth": 1.5,
            "flexDirection": "row",
            "height": 36,
            "paddingRight": 8,
          },
          undefined,
        ]
      }
    >
      <View
        style={
          Object {
            "marginLeft": 17,
            "marginRight": 13,
          }
        }
      >
        <svg
          fill="none"
          height={15}
          style={Object {}}
          viewBox="0 0 14 15"
          width={14}
        >
          <path
            clipRule="evenodd"
            d="M2.162 5.946a3.784 3.784 0 107.568 0 3.784 3.784 0 00-7.568 0zM0 5.946a5.946 5.946 0 008.929 5.145l3.225 3.226a1.081 1.081 0 001.53-1.53l-3.11-3.108A5.946 5.946 0 100 5.946z"
            fill="#B4B9BD"
            fillRule="evenodd"
            style={Object {}}
          />
        </svg>
      </View>
      <View
        style={
          Array [
            Object {
              "alignItems": "center",
              "flex": 1,
              "flexDirection": "row",
              "justifyContent": "center",
            },
            undefined,
          ]
        }
      >
        <TextInput
          allowFontScaling={true}
          onBlur={[Function]}
          onChangeText={[Function]}
          onFocus={[Function]}
          placeholder="global:search"
          rejectResponderTermination={true}
          style={
            Array [
              Object {
                "color": "#2E3338",
                "flex": 1,
                "fontFamily": "Inter-Regular",
                "fontSize": 16,
                "lineHeight": 22,
                "paddingHorizontal": 0,
                "paddingVertical": 12,
              },
              undefined,
              Object {
                "paddingVertical": 6,
              },
            ]
          }
          testID="SearchInput"
          underlineColorAndroid="transparent"
          value=""
        />
      </View>
    </View>
  </View>
  <View
    style={
      Object {
        "flex": 1,
      }
    }
    testID="RecipientPicker"
  >
    <RCTScrollView
      ListEmptyComponent={
        <View
          style={
            Object {
              "justifyContent": "center",
              "paddingHorizontal": 24,
            }
          }
        >
          <View
            style={
              Object {
                "justifyContent": "center",
                "paddingVertical": 24,
                "textAlign": "center",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#B4B9BD",
                  "fontFamily": "Inter-Regular",
                  "fontSize": 18,
                  "lineHeight": 24,
                  "textAlign": "center",
                }
              }
            >
              noContacts
            </Text>
          </View>
        </View>
      }
      ListHeaderComponent={[Function]}
      contentContainerStyle={null}
      data={
        Array [
          Object {
            "data": Array [
              Object {
                "contactId": "contactId",
                "displayId": "442012341234",
                "displayName": "George Bogart",
                "e164PhoneNumber": "+442012341234",
                "kind": "Contact",
                "phoneNumberLabel": "phoneNumLabel",
              },
              Object {
                "contactId": "contactId",
                "displayId": "13105550000",
                "displayName": "Jane Doe",
                "e164PhoneNumber": "+13105550000",
                "kind": "Contact",
                "phoneNumberLabel": "phoneNumLabel",
              },
              Object {
                "contactId": "contactId",
                "displayId": "14155550000",
                "displayName": "John Doe",
                "e164PhoneNumber": "+14155550000",
                "kind": "Contact",
                "phoneNumberLabel": "phoneNumLabel",
              },
            ],
            "key": "contacts",
          },
        ]
      }
      disableVirtualization={false}
      getItem={[Function]}
      getItemCount={[Function]}
      horizontal={false}
      initialNumToRender={30}
      keyExtractor={[Function]}
      keyboardShouldPersistTaps="always"
      maxToRenderPerBatch={10}
      onContentSizeChange={[Function]}
      onEndReachedThreshold={2}
      onLayout={[Function]}
      onMomentumScrollEnd={[Function]}
      onScroll={[Function]}
      onScrollBeginDrag={[Function]}
      onScrollEndDrag={[Function]}
      renderItem={[Function]}
      scrollEventThrottle={50}
      stickyHeaderIndices={Array []}
      updateCellsBatchingPeriod={50}
      windowSize={21}
    >
      <View>
        <View
          onLayout={[Function]}
        />
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            style={
              Array [
                Object {
                  "alignItems": "center",
                  "backgroundColor": "#FFFFFF",
                  "flexDirection": "row",
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                  "paddingVertical": 8,
                },
                undefined,
              ]
            }
          >
            <Text
              style={
                Object {
                  "color": "#9CA4A9",
                  "fontFamily": "Inter-Medium",
                  "fontSize": 13,
                  "lineHeight": 16,
                }
              }
            >
              contacts
            </Text>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="RecipientItem"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "height": 64,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "marginRight": 12,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        Object {
                          "backgroundColor": "#7AD6FE",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 20,
                          },
                        ]
                      }
                    >
                      G
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    ellipsizeMode="tail"
                    numberOfLines={1}
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    George Bogart
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      }
                    }
                  >
                    442012341234
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={Object {}}
            />
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View>
            <View
              accessible={true}
              focusable={true}
              nativeBackgroundAndroid={
                Object {
                  "attribute": "selectableItemBackground",
                  "type": "ThemeAttrAndroid",
                }
              }
              onClick={[Function]}
              onResponderGrant={[Function]}
              onResponderMove={[Function]}
              onResponderRelease={[Function]}
              onResponderTerminate={[Function]}
              onResponderTerminationRequest={[Function]}
              onStartShouldSetResponder={[Function]}
              testID="RecipientItem"
            >
              <View
                style={
                  Object {
                    "alignItems": "center",
                    "flex": 1,
                    "flexDirection": "row",
                    "height": 64,
                    "justifyContent": "space-between",
                    "paddingHorizontal": 16,
                  }
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "flexDirection": "row",
                        "justifyContent": "center",
                      },
                      Object {
                        "marginRight": 12,
                      },
                    ]
                  }
                >
                  <View
                    style={
                      Array [
                        Object {
                          "alignItems": "center",
                          "justifyContent": "center",
                        },
                        Object {
                          "backgroundColor": "#7AD6FE",
                          "borderRadius": 20,
                          "height": 40,
                          "width": 40,
                        },
                      ]
                    }
                  >
                    <Text
                      style={
                        Array [
                          Object {
                            "color": "#FFFFFF",
                            "fontFamily": "Inter-Medium",
                            "fontSize": 16,
                          },
                          Object {
                            "fontSize": 20,
                          },
                        ]
                      }
                    >
                      J
                    </Text>
                  </View>
                </View>
                <View
                  style={
                    Object {
                      "flex": 1,
                    }
                  }
                >
                  <Text
                    ellipsizeMode="tail"
                    numberOfLines={1}
                    style={
                      Object {
                        "color": "#2E3338",
                        "fontFamily": "Inter-Medium",
                        "fontSize": 16,
                        "lineHeight": 22,
                      }
                    }
                  >
                    Jane Doe
                  </Text>
                  <Text
                    style={
                      Object {
                        "color": "#9CA4A9",
                        "fontFamily": "Inter-Regular",
                        "fontSize": 14,
                        "lineHeight": 18,
                      }
                    }
                  >
                    13105550000
                  </Text>
                </View>
              </View>
            </View>
            <View
              style={Object {}}
            />
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        >
          <View
            accessible={true}
            focusable={true}
            nativeBackgroundAndroid={
              Object {
                "attribute": "selectableItemBackground",
                "type": "ThemeAttrAndroid",
              }
            }
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
            testID="RecipientItem"
          >
            <View
              style={
                Object {
                  "alignItems": "center",
                  "flex": 1,
                  "flexDirection": "row",
                  "height": 64,
                  "justifyContent": "space-between",
                  "paddingHorizontal": 16,
                }
              }
            >
              <View
                style={
                  Array [
                    Object {
                      "alignItems": "center",
                      "flexDirection": "row",
                      "justifyContent": "center",
                    },
                    Object {
                      "marginRight": 12,
                    },
                  ]
                }
              >
                <View
                  style={
                    Array [
                      Object {
                        "alignItems": "center",
                        "justifyContent": "center",
                      },
                      Object {
                        "backgroundColor": "#7AD6FE",
                        "borderRadius": 20,
                        "height": 40,
                        "width": 40,
                      },
                    ]
                  }
                >
                  <Text
                    style={
                      Array [
                        Object {
                          "color": "#FFFFFF",
                          "fontFamily": "Inter-Medium",
                          "fontSize": 16,
                        },
                        Object {
                          "fontSize": 20,
                        },
                      ]
                    }
                  >
                    J
                  </Text>
                </View>
              </View>
              <View
                style={
                  Object {
                    "flex": 1,
                  }
                }
              >
                <Text
                  ellipsizeMode="tail"
                  numberOfLines={1}
                  style={
                    Object {
                      "color": "#2E3338",
                      "fontFamily": "Inter-Medium",
                      "fontSize": 16,
                      "lineHeight": 22,
                    }
                  }
                >
                  John Doe
                </Text>
                <Text
                  style={
                    Object {
                      "color": "#9CA4A9",
                      "fontFamily": "Inter-Regular",
                      "fontSize": 14,
                      "lineHeight": 18,
                    }
                  }
                >
                  14155550000
                </Text>
              </View>
            </View>
          </View>
        </View>
        <View
          onLayout={[Function]}
          style={null}
        />
      </View>
    </RCTScrollView>
    <View
      collapsable={false}
      style={
        Array [
          Object {
            "bottom": 0,
            "left": 0,
            "right": 0,
          },
          Object {
            "height": 0,
          },
          undefined,
        ]
      }
    />
  </View>
</View>
`;
